Fix the the attribution overlap on smaller (landscape) screens.
Changes:
- Create attribution mixin
- Clean unused attribution styles
- Fix attribution for 'make thumbnail' map

--- a/web-ui/src/main/resources/catalog/views/default/less/gn_view.less
+++ b/web-ui/src/main/resources/catalog/views/default/less/gn_view.less
@@ -71,3 +71,20 @@
   }
 }
 
+// attribution mixin
+.gn-attribution() {
+  bottom: 4px;
+  right: auto;
+  left: 4px;
+  height: auto;
+  padding: 5px;
+  border-radius: 0;
+  ul {
+    font-size: 1rem;
+    padding-left: 0;
+    padding-right: 10px;
+    li {
+      white-space: nowrap;
+    }
+  }
+}
